--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -175,27 +175,27 @@
           </div>
         </div>
         <div class=" pull-right text-right">
-          <p style="font-size: 16px;font-weight: bold;color:#5cb85c;"
-              ng-if="ctrl.datosVista.tiene_descuento">Saldo Inicial: {{fSessionCI.monedero}}</p>
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
-              ng-if="ctrl.datosVista.tiene_descuento">Paquete {{ctrl.paqueteSeleccionado.titulo_pq}}: -{{ctrl.monto}}</p>
+              ng-if="true">Paquete {{ctrl.paqueteSeleccionado.titulo_pq}}: {{ctrl.monto}}</p>
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
-              ng-if="ctrl.datosVista.tiene_descuento">Foto Adicional ({{ctrl.cantidad_adic}} x {{ctrl.precio_adicional}}$): -{{ctrl.monto_adicionales}}</p>
+              ng-if="true">Foto Adicional ({{ctrl.cantidad_adic}} x {{ctrl.precio_adicional}}$): {{ctrl.monto_adicionales}}</p>
 
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
-              ng-if="ctrl.datosVista.tiene_descuento">Video Adicional ({{ctrl.cantidad_video}} x {{ctrl.precio_video}}$): -{{ctrl.monto_adicionales_video}}</p>
-          
-          <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
-              ng-if="ctrl.datosVista.tiene_bonificacion">Bonificacion: -{{ctrl.monto_bonificacion}}</p>
+              ng-if="true">Video Adicional ({{ctrl.cantidad_video}} x {{ctrl.precio_video}}$): {{ctrl.monto_adicionales_video}}</p>
+
+          <!-- <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
+              ng-if="ctrl.datosVista.tiene_bonificacion">Bonificacion: -{{ctrl.monto_bonificacion}}</p> -->
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
               ng-if="ctrl.datosVista.tiene_descuento">Descuento: -{{ctrl.monto_descuento}}</p>
 
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;"
               ng-if="ctrl.datosVista.tiene_descuento">Total : {{ctrl.monto_total}}</p>
-          
+
           <hr>
-          <p style="font-size: 16px;font-weight: bold;color:#1199d3;">Total a Pagar: {{ctrl.monto_a_pagar}}</p>
-          <p style="font-size: 16px;font-weight: bold;color:#1199d3;">Restante Monedero: {{ctrl.restante}}</p>
+          <!-- <p style="font-size: 16px;font-weight: bold;color:#1199d3;">Total a Pagar: {{ctrl.monto_a_pagar}}</p> -->
+          <p style="font-size: 16px;font-weight: bold;color:#5cb85c;"
+              ng-if="ctrl.datosVista.tiene_descuento">Saldo Inicial: {{fSessionCI.monedero}}</p>
+          <p style="font-size: 16px;font-weight: bold;color:#1199d3;">Saldo Final: {{ctrl.restante}}</p>
           <button class="pull-right btn btn-input-sm btn-success mt-5" type="button" ng-click="ctrl.btnPagar();">Pagar</button>
         </div>
       </div>
