--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -196,8 +196,16 @@
           <p style="font-size: 16px;font-weight: bold;color:#5cb85c;"
               ng-if="ctrl.datosVista.tiene_descuento">Saldo Inicial: {{fSessionCI.monedero}}</p>
           <p style="font-size: 16px;font-weight: bold;color:#1199d3;">Saldo Final: {{ctrl.restante}}</p>
-          <button class="pull-right btn btn-input-sm btn-success mt-5" type="button" ng-click="ctrl.btnPagar();">Pagar</button>
+
         </div>
+        <div class="col-xs-12 pl-n">
+          <label class="checkbox minotaur-checkbox inline-block m-0">He leído y acepto los <a href="javascript:;" ng-click="ctrl.btnTerminosCondiciones();" >Términos y Condiciones</a>
+            <input type="checkbox" ng-model="ctrl.selectedTerminos"><div class="input-indicator"></div>
+          </label>
+         
+          <button class="pull-right btn btn-input-sm btn-success mt-5" type="button" ng-click="ctrl.btnValidar();">Pagar</button>
+        </div>
+        
       </div>
 
       <div class="tile p-15" style="min-height: 400px;" ng-if="ctrl.modoDescargaCompleta">
