--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -106,7 +106,7 @@
                   <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
                     <i class="fa fa-search"></i>
                   </a>
-                  <a class="img-select" ng-if="image.descargado == 1" href="javascript:;" ng-click="ga.btnPedidos($index)" uib-tooltip="Merchandising" tooltip-placement="top">
+                  <a class="img-select" ng-if="image.descargado == 1 && !image.es_salida" href="javascript:;" ng-click="ga.btnPedidos($index)" uib-tooltip="Merchandising" tooltip-placement="top">
                     <i class="fa fa-gift"></i>
                   </a>
                 </div>
