--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -70,9 +70,9 @@
         </section>
 
         <ul class="mix-controls">
-          <li class="select-all">
-            <label class="checkbox minotaur-checkbox inline-block m-0" ng-class="{'disabled': !ctrl.images.length}">{{ 'Text.TODOS' | translate }}
-              <input type="checkbox" ng-model="selectedAll" ng-click="ctrl.selectAll()" ng-class="{'disabled': !ctrl.images.length}"><div class="input-indicator"></div>
+          <li class="select-all" ng-class="{'disabled': !ctrl.images.length}">
+            <label class="checkbox minotaur-checkbox inline-block m-0" >{{ 'Text.TODOS' | translate }}
+              <input type="checkbox" ng-model="selectedAll" ng-click="ctrl.selectAll()" ng-disabled="!ctrl.images.length"><div class="input-indicator"></div>
             </label>
           </li>
 
