--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -33,7 +33,7 @@
         <li ng-class="{'disabled': !ga.isSelected}" ng-click='ga.btnDescargarFiles();'>
           <a href="javascript:;"><i class="fa fa-download" ></i> Descargar</a>
         </li>
-        <li ng-click='ga.selectPedido();'>
+        <li ng-click='ga.btnPedidos();'>
           <a href="javascript:;"><i class="fa fa-gift" ></i> Merchandising</a>
         </li>
       </ul>
