--- a/admin/index.html
+++ b/admin/index.html
@@ -68,7 +68,6 @@
         <div class="page-loading-text"></div>
     </div>
     <div id="wrap">
-
       <minotaur-header ng-class="specialClass" ng-if="specialClass !== 'core'"></minotaur-header>
 
       <minotaur-nav ng-class="specialClass" ng-if="specialClass !== 'core'"></minotaur-nav>
@@ -308,7 +307,7 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sons-of-obsidian"></script>
 
   </body>
