--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -50,7 +50,7 @@
           }
          }"
         >
-          <div class="masonry-brick  m-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ga.images">
+          <div class="masonry-brick col-md-3 m-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ga.images">
             <div class="img-container">
               <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="">
               <div class="img-details-hover" style="float: right;">
