--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -1,12 +1,12 @@
 <div class="page page-extra pull-to-header">
   <ol class="breadcrumb bg-white">
-    <li><a ui-sref="dashboard">Inicio</a></li>
-    <li class="active">Mi Galeria</li>
+    <li><a ui-sref="dashboard">{{ 'Menu.DASHBOARD' | translate }}</a></li>
+    <li class="active">{{ 'Menu.GALERIA' | translate }}</li>
   </ol>
   <div class="row" ng-show="!ga.pedidoBool">
     <div class="tile p-15">
       <section class="tile-header pl-0">
-        <h1 class="heading">Mi Galeria</h1>
+        <h1 class="heading">{{ 'Menu.GALERIA' | translate }}</h1>
         <p>Ahora puede descargar sus fotos.</p>
         <p ng-if="!image.es_salida">Haga un pedido de producto.</p>
         <div class="controls">
@@ -25,13 +25,13 @@
 
       <ul class="mix-controls">
         <li class="select-all">
-          <label class="checkbox minotaur-checkbox inline-block m-0">Select all
+          <label class="checkbox minotaur-checkbox inline-block m-0">{{ 'Text.TODOS' | translate }}
             <input type="checkbox" ng-model="selectedAll" ng-click="ga.selectAll()"><div class="input-indicator"></div>
           </label>
         </li>
 
         <li ng-class="{'disabled': !ga.isSelected}" ng-click='ga.btnDescargarFiles();'>
-          <a href="javascript:;"><i class="fa fa-download" ></i> Descargar</a>
+          <a href="javascript:;"><i class="fa fa-download" ></i> {{ 'Text.DESCARGAR' | translate }}</a>
         </li>
         <li ng-click='ga.btnPedidos();'>
           <a href="javascript:;"><i class="fa fa-gift" ></i> Merchandising</a>
