--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -178,7 +178,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="row mix-grid" masonry>
+                  <div class="row mix-grid" masonry="{ transitionDuration: '0.4s',stagger: 30 }">
                     <div class="gallery" ng-mixitup magnific-popup="{
                       delegate: 'a.img-preview',
                       type: 'image',
@@ -189,28 +189,29 @@
                         navigateByImgClick: true,
                         preload: [0,2]
                       }}" >
-
-                      <div class="masonry-brick col-md-3 col-sm-4 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
-                        <div class="img-container">
-                          <div class="ribbon-wrapper-green" ng-if="image.descargado"><div class="ribbon-green">SOLD!</div></div>
-                          <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="" ng-if="image.tipo_archivo == 1">
-                          <img class="img-responsive" ng-src="{{image.src_image}}" alt="" ng-if="image.tipo_archivo == 2">
-                          <div class="img-details">
-                            <h4>{{image.title}}</h4>
-                            <div class="img-controls">
-                              <a href="javascript:;" class="img-select" ng-click="c.selectImage($index)">
-                                <i class="fa fa-circle-o" ng-show="!image.selected"></i>
-                                <i class="fa fa-circle" ng-show="image.selected"></i>
-                              </a>
-                              <a href="javascript:;" class="img-link" ng-click="c.btnAnularArchivo(image)">
-                                <i class="fa fa-trash"></i>
-                              </a>
-                              <a class="img-preview" href="{{image.src}}" title="{{image.title}}" ng-if="image.tipo_archivo == 1">
-                                <i class="fa fa-search"></i>
-                              </a>
-                              <a href="javascript:;" class="img-link" ng-if="image.tipo_archivo == 2" ng-click="c.videosView(image)">
-                                <i class="fa fa-search"></i>
-                              </a>
+                      <div infinite-scroll='c.loadMore()' infinite-scroll-distance='2'>
+                        <div class="masonry-brick col-md-3 col-sm-4 mb-20 mix {{image.tipo_archivo}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
+                          <div class="tile img-container">
+                            <div class="ribbon-wrapper-green" ng-if="image.descargado"><div class="ribbon-green">SOLD!</div></div>
+                            <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="" ng-if="image.tipo_archivo == 1">
+                            <img class="img-responsive" ng-src="{{image.src_image}}" alt="" ng-if="image.tipo_archivo == 2">
+                            <div class="img-details">
+                              <h4>{{$index+1}}</h4>
+                              <div class="img-controls">
+                                <a href="javascript:;" class="img-select" ng-click="c.selectImage($index)">
+                                  <i class="fa fa-circle-o" ng-show="!image.selected"></i>
+                                  <i class="fa fa-circle" ng-show="image.selected"></i>
+                                </a>
+                                <a href="javascript:;" class="img-link" ng-click="c.btnAnularArchivo(image)">
+                                  <i class="fa fa-trash"></i>
+                                </a>
+                                <a class="img-preview" href="{{image.src}}" title="{{image.title}}" ng-if="image.tipo_archivo == 1">
+                                  <i class="fa fa-search"></i>
+                                </a>
+                                <a href="javascript:;" class="img-link" ng-if="image.tipo_archivo == 2" ng-click="c.videosView(image)">
+                                  <i class="fa fa-search"></i>
+                                </a>
+                              </div>
                             </div>
                           </div>
                         </div>
