--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -178,7 +178,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="row mix-grid" masonry="{ transitionDuration: '0.4s',stagger: 30 }">
+                  <div class="row mix-grid" >
                     <div class="gallery" ng-mixitup magnific-popup="{
                       delegate: 'a.img-preview',
                       type: 'image',
@@ -190,7 +190,7 @@
                         preload: [0,2]
                       }}" >
                       <div infinite-scroll='c.loadMore()' infinite-scroll-distance='2'>
-                        <div class="masonry-brick col-md-3 col-sm-4 mb-20 mix {{image.tipo_archivo}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
+                        <div class="col-md-3 col-sm-4 mb-20 mix {{image.tipo_archivo}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
                           <div class="tile img-container">
                             <div class="ribbon-wrapper-green" ng-if="image.descargado"><div class="ribbon-green">SOLD!</div></div>
                             <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="" ng-if="image.tipo_archivo == 1">
