--- a/admin/index.html
+++ b/admin/index.html
@@ -272,6 +272,7 @@
     <script src="app/pages/mi-galeria/gallery.controller.js"></script>
     <script src="app/pages/tienda/tienda.controller.js"></script>
     <script src="app/pages/producto/producto.controller.js"></script>
+    <script src="app/pages/pedido/pedido.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
