--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -14,7 +14,7 @@
             <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
             <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
               <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
-              <li role="menuitem"><a href="javascript:;" ng-click="ga.cargarGaleria();" minotaur-tile-refresh></a></li>
+              <li role="menuitem"><a href="javascript:;" ng-click="ga.cargarGaleria(ga.fDataUsuario,true);" minotaur-tile-refresh></a></li>
               <li role="menuitem"><a href="javascript:;" minotaur-tile-fullscreen></a></li>
               <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
             </ul>
@@ -33,8 +33,8 @@
         <li ng-class="{'disabled': !ga.isSelected}" ng-click='ga.btnDescargarFiles();'>
           <a href="javascript:;"><i class="fa fa-download" ></i> {{ 'Text.DESCARGAR' | translate }}</a>
         </li>
-        <li ng-click='ga.btnPedidos();'>
-          <a href="javascript:;"><i class="fa fa-gift" ></i> Merchandising</a>
+        <li ng-click='ga.btnPedidos();' ng-if="!fSessionCI.es_salida">
+          <a href="javascript:;"><i class="fa fa-gift" ></i> {{ 'Text.MERCHANDISING' | translate }}</a>
         </li>
       </ul>
       <div class="row mix-grid" masonry>
