--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -234,7 +234,7 @@
           <div class="col-md-12 col-sm-12">
             <h2 class="text-custom text-center mb-5">{{ 'Text.GRACIAS' | translate }}</h2>
             <h3 ng-if="!ctrl.modoCalificacionOk" class="text-custom text-center text-cyan mt-0">{{ 'Text.CALIFICA' | translate }}</h3>
-            <h3 ng-if="!ctrl.modoCalificacionOk" class="text-custom text-center text-cyan mt-0">{{ 'Text.GRACIAS_CALIFICA' | translate }}</h3>
+            <h3 ng-if="ctrl.modoCalificacionOk" class="text-custom text-center text-cyan mt-0">{{ 'Text.GRACIAS_CALIFICA' | translate }}</h3>
             <div class="rating-stars" ng-if="!ctrl.modoCalificacionOk" >
               <span ng-click="ctrl.calificar(5);" >☆</span>
               <span ng-click="ctrl.calificar(4);">☆</span>
