--- a/admin/app/pages/perfil/perfil.html
+++ b/admin/app/pages/perfil/perfil.html
@@ -65,6 +65,18 @@
                         <input type="text" class="form-control  text-center ng-class:{'underline-input':!p.modoEditar};" id="whatsapp" placeholder="WhatsApp" ng-model="p.fDataPerfil.whatsapp" ng-readonly="!p.modoEditar">
                       </div>
                     </div>
+                    <div class="form-group">
+                      <label for="hotel" class="col-sm-3 control-label minotaur-label">Hotel: </label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control  text-center ng-class:{'underline-input':!p.modoEditar};" id="hotel" placeholder="hotel" ng-model="p.fDataPerfil.hotel" ng-readonly="!p.modoEditar">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="habitacion" class="col-sm-3 control-label minotaur-label">Habitación: </label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control  text-center ng-class:{'underline-input':!p.modoEditar};" id="habitacion" placeholder="habitacion" ng-model="p.fDataPerfil.habitacion" ng-readonly="!p.modoEditar">
+                      </div>
+                    </div>
 
                     <h4 class="text-info f-14 col-sm-12">Configuracion de perfil</h4>
                     <div class="form-group">
