--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -186,36 +186,41 @@
         <!-- CESTA -->
         <div class="row">
           <div class="col-md-12 col-sm-12 mt-lg" >
-          <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear">
+            <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear">
+            </div>
           </div>
-        </div>
-        <div class="form-inline col-md-12 col-sm-12 mt-lg text-right">
-          <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.IMPORTE' | translate }}</label>
-          <div class="input-group mb-10">
-            <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+          <div class="form-inline col-md-12 col-sm-12 mt-lg text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.IMPORTE' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
           </div>
-        </div>
-        <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
-          <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
-          <div class="input-group mb-10">
-            <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="fSessionCI.monedero" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="fSessionCI.monedero" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
           </div>
-        </div>
-        <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
-          <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;">{{ 'Text.SALDO_FINAL' | translate }}</label>
-          <div class="input-group mb-10">
-            <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.saldo_final" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;">{{ 'Text.SALDO_FINAL' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.saldo_final" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
           </div>
-        </div>
-        <div class="form-inline col-md-12 col-sm-12 mt-xs text-right" ng-show="ctrl.monto_a_pagar > 0">
-          <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.TOTAL_PAGAR' | translate }}</label>
-          <div class="input-group mb-10">
-            <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_a_pagar" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right" ng-show="ctrl.monto_a_pagar > 0">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.TOTAL_PAGAR' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_a_pagar" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
           </div>
-        </div>
-        <div class="col-md-12 mt">
-          <button class="btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right" ng-click="ctrl.PagarPedido()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
-        </div>
+          <div class="col-md-12 mt">
+            <label class="checkbox minotaur-checkbox inline-block m-0 pull-right">He leído y acepto los <a href="javascript:;" ng-click="ctrl.btnTerminosCondiciones();" >Términos y Condiciones</a>
+              <input type="checkbox" ng-model="ctrl.selectedTerminos"><div class="input-indicator"></div>
+            </label>
+          </div>
+          <div class="col-md-12 mt">
+            <button class="btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right" ng-click="ctrl.btnPagar()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
+          </div>
         </div>
 
       </div>
