tienda, datos adicionales cliente

--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -186,7 +186,7 @@
         <!-- CESTA -->
         <div class="row">
           <div class="col-md-12 col-sm-12 mt-lg" >
-            <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear">
+            <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear"  ng-style="ctrl.getTableHeight();">
             </div>
           </div>
           <div class="form-inline col-md-12 col-sm-12 mt-lg text-right">
