--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -195,6 +195,18 @@
               <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
             </div>
           </div>
+          <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> DESCUENTO</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_descuento" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
+          <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> IMPORTE TOTAL</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.importe_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
           <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
             <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
             <div class="input-group mb-10">
