mi galeria con pedido

--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -123,8 +123,5 @@
       </div>
     </div>
   </div>
-
-  <div class="row" ng-show="ga.pedidoBool" ng-include="'app/pages/mi-galeria/pedidos.php'">
-
-  </div>
+  <div class="row" ng-show="ga.pedidoBool" ng-include="'app/pages/mi-galeria/pedidos.php'"> </div>
 </div>
