--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -12,14 +12,10 @@
             <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PAQUETE' | translate }}</div>
             <div class="card-container col-lg-3 col-sm-6 col-sm-12" ng-repeat="item in ctrl.listaPaquetes">
                 <div class="card" ng-click="ctrl.selPaquete(item.idpaquete)">
-                  <div class="front text-center" ng-class="{'bg-lightred': item.selected, 'bg-greensea':!item.selected}">
+                  <div class="front text-center" ng-class="{'bg-lightred': item.selected, 'bg-lightgray':!item.selected}">
                     <div class="row">
-                      <!-- <div class="col-xs-4">
-                        <i class="fa fa-shopping-cart fa-2x"></i>
-                      </div> -->
                       <div class="col-xs-12">
                         <p class="text-lg line-lg text-strong">{{item.titulo_pq}}</p>
-                        <!-- <span>New Users</span> -->
                       </div>
                     </div>
                     <div class="row">
@@ -33,17 +29,19 @@
                       </div>
                     </div>
                   </div>
-                  <div class="back text-center p-md" ng-class="{'bg-lightred': item.selected, 'bg-greensea':!item.selected}">
-                    <div class="row">
-                      <div class="col-xs-12" style="height: 25%">
+                  <div class="back text-center p-md" ng-class="{'bg-lightred': item.selected, 'bg-lightgray':!item.selected}">
+                    <div class="row" style="height: 50%">
+                      <div class="col-xs-12">
                         <p class="text-lg line-lg text-strong">{{item.titulo_pq}}</p>
                         <p class="text-md line-md">{{item.cantidad}} fotos al precio de US$ {{item.monto}}</p>
                       </div>
-                      <div class="col-xs-6" style="height: 60%">
-                        <a href=javascript:;><i class="fa fa-camera fa-2x"></i> + US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</a>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-6">
+                        <div><i class="fa fa-camera fa-2x"></i></div><div> + US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
                       </div>
-                      <div class="col-xs-6" style="height: 60%">
-                        <a href=javascript:;><i class="fa fa-video-camera fa-2x"></i> + US$ {{ctrl.listaExcursiones[0].precio_video}}</a>
+                      <div class="col-xs-6">
+                        <div><i class="fa fa-video-camera fa-2x"></i></div><div> + US$ {{ctrl.listaExcursiones[0].precio_video}}</div>
                       </div>
                     </div>
                   </div>
