--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -41,6 +41,9 @@
               <div class="form-group pull-right mt-lg" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='c.btnNuevo()'>Nuevo</button>
               </div>
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+                <button class="btn btn-warning" ng-click='c.btnImportarExcel()'>Subir Excel</button>
+              </div>
             </div>
             <!-- <select ng-model="c.lang" ng-options="l for l in c.langs"></select><br> -->
             <!-- <div class="col-md-12 col-sm-12" ui-i18n="{{c.lang}}"> -->
